tests/snapshots/http_requests__http_requests.snap
---
source: tests/http_requests.rs
assertion_line: 22
expression: requests

---
POST /v2/track HTTP/1.1
host: dc.services.visualstudio.com
content-type: application/json

[
  {
    "data": {
      "baseData": {
        "data": "http://10.1.2.4/hello/world?name=marry",
        "duration": "STRIPPED",
        "id": "STRIPPED",
        "name": "dependency",
        "properties": {
          "enduser.id": "marry",
          "http.status_code": "200",
          "http.url": "http://10.1.2.4/hello/world?name=marry",
          "net.host.name": "localhost",
          "net.peer.ip": "10.1.2.4",
          "service.name": "client",
          "service.namespace": "test"
        },
        "resultCode": "200",
        "target": "10.1.2.4",
        "type": "HTTP",
        "ver": 2
      },
      "baseType": "RemoteDependencyData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.RemoteDependency",
    "sampleRate": 100.0,
    "tags": {
      "ai.cloud.role": "test.client",
      "ai.operation.id": "STRIPPED",
      "ai.user.authUserId": "marry"
    },
    "time": "STRIPPED"
  }
]


POST /v2/track HTTP/1.1
host: dc.services.visualstudio.com
content-type: application/json

[
  {
    "data": {
      "baseData": {
        "duration": "STRIPPED",
        "id": "STRIPPED",
        "name": "request",
        "properties": {
          "enduser.id": "marry",
          "http.status_code": "200",
          "http.target": "/hello/world?name=marry",
          "net.host.name": "localhost",
          "net.peer.ip": "10.1.2.3",
          "service.name": "server",
          "service.namespace": "test"
        },
        "responseCode": "200",
        "source": "10.1.2.3",
        "success": true,
        "url": "/hello/world?name=marry",
        "ver": 2
      },
      "baseType": "RequestData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.Request",
    "sampleRate": 100.0,
    "tags": {
      "ai.cloud.role": "test.server",
      "ai.operation.id": "STRIPPED",
      "ai.operation.parentId": "STRIPPED",
      "ai.user.authUserId": "marry"
    },
    "time": "STRIPPED"
  },
  {
    "data": {
      "baseData": {
        "message": "An event!",
        "properties": {
          "happened": "true"
        },
        "ver": 2
      },
      "baseType": "MessageData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.Message",
    "sampleRate": 100.0,
    "tags": {
      "ai.operation.id": "STRIPPED",
      "ai.operation.parentId": "STRIPPED"
    },
    "time": "STRIPPED"
  },
  {
    "data": {
      "baseData": {
        "exceptions": [
          {
            "message": "An error",
            "stack": "a backtrace",
            "typeName": "<no type>"
          }
        ],
        "ver": 2
      },
      "baseType": "ExceptionData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.Exception",
    "sampleRate": 100.0,
    "tags": {
      "ai.operation.id": "STRIPPED",
      "ai.operation.parentId": "STRIPPED"
    },
    "time": "STRIPPED"
  }
]
