tests/snapshots/http_requests__traces_batch_async_std.snap
---
source: tests/http_requests.rs
expression: traces_batch_async_std
---
POST /v2/track HTTP/1.1
host: dc.services.visualstudio.com
content-type: application/json
content-encoding: gzip

[
  {
    "data": {
      "baseData": {
        "duration": "STRIPPED",
        "id": "STRIPPED",
        "name": "async-std",
        "properties": {
          "service.name": "unknown_service",
          "telemetry.sdk.language": "rust",
          "telemetry.sdk.name": "opentelemetry",
          "telemetry.sdk.version": "0.27.1"
        },
        "resultCode": "0",
        "type": "InProc",
        "ver": 2
      },
      "baseType": "RemoteDependencyData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.RemoteDependency",
    "sampleRate": 100.0,
    "tags": {
      "ai.cloud.role": "unknown_service",
      "ai.internal.sdkVersion": "opentelemetry:0.27.1",
      "ai.operation.id": "STRIPPED"
    },
    "time": "STRIPPED"
  }
]
