tests/snapshots/http_requests__traces_batch_tokio.snap
---
source: tests/http_requests.rs
expression: traces_batch_tokio
---
POST /v2/track HTTP/1.1
host: dc.services.visualstudio.com
content-type: application/json
content-encoding: gzip

[
  {
    "data": {
      "baseData": {
        "duration": "STRIPPED",
        "id": "STRIPPED",
        "name": "tokio",
        "properties": {
          "service.name": "unknown_service:http_requests-9b93771c4bb6736f",
          "telemetry.sdk.language": "rust",
          "telemetry.sdk.name": "opentelemetry",
          "telemetry.sdk.version": "STRIPPED"
        },
        "resultCode": "0",
        "type": "InProc",
        "ver": 2
      },
      "baseType": "RemoteDependencyData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.RemoteDependency",
    "sampleRate": 100.0,
    "tags": {
      "ai.cloud.role": "unknown_service:http_requests-9b93771c4bb6736f",
      "ai.internal.sdkVersion": "STRIPPED",
      "ai.operation.id": "STRIPPED"
    },
    "time": "STRIPPED"
  }
]
