tests/snapshots/http_requests__traces_with_resource_attributes_in_events.snap
---
source: tests/http_requests.rs
expression: traces_with_resource_attributes_in_events
---
POST /v2/track HTTP/1.1
host: dc.services.visualstudio.com
content-type: application/json
content-encoding: gzip

[
  {
    "data": {
      "baseData": {
        "duration": "STRIPPED",
        "id": "STRIPPED",
        "name": "resource attributes in events",
        "properties": {
          "attr": "value"
        },
        "resultCode": "0",
        "type": "InProc",
        "ver": 2
      },
      "baseType": "RemoteDependencyData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.RemoteDependency",
    "sampleRate": 100.0,
    "tags": {
      "ai.operation.id": "STRIPPED"
    },
    "time": "STRIPPED"
  },
  {
    "data": {
      "baseData": {
        "message": "An event!",
        "properties": {
          "attr": "value"
        },
        "ver": 2
      },
      "baseType": "MessageData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.Message",
    "sampleRate": 100.0,
    "tags": {
      "ai.operation.id": "STRIPPED",
      "ai.operation.parentId": "STRIPPED"
    },
    "time": "STRIPPED"
  }
]
